kube/deployment-db-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:6.0
          imagePullPolicy: Never # Use "Never" for local images
          # command: ["sh", "-c", "your-start-command-here"]
          resources:
            requests:
              memory: "128Mi" # Minimum memory required
              cpu: "250m"     # Minimum CPU required
            limits:
              memory: "512Mi" # Maximum memory allowed
              cpu: "500m"     
          ports:
            - containerPort: 27017
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongodb-pvc
