kube/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: shelter-api
  labels:
    app: shelter-api
spec:
  selector:
    app: shelter-api
  ports:
    - protocol: TCP
      port: 8080       # Port exposed by the Service
      targetPort: 8080 # Port on the container
  type: ClusterIP # Use LoadBalancer or NodePort for external access
