kube/service-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017       # Port exposed by the Service
      targetPort: 27017 # Port on the container
  type: ClusterIP # Use LoadBalancer or NodePort for external access
