kube/ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shelter-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: minikube.shelter # Replace with your desired hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shelter-web
                port:
                  number: 8050
